syntax = "proto3";

package machine;

service MachineSaver {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
    rpc SaveMachine (SaveMachineRequest) returns (SaveMachineResponse);
    rpc GetCertificate(GetCertificateRequest) returns (GetCertificateResponse);
}

message Port {
    uint32 port = 1;
    string service = 2;
}

message Address {
    string ip = 1;
    repeated Port ports = 2;
}

message Iface {
    string name = 1;
    repeated Address address = 2;
    string error = 3;
}

message Machine {
    string uuid = 1;
    repeated Iface ifaces = 2;
    string error = 3;
}

message SaveMachineRequest {
    Machine machine = 1;
}

message SaveMachineResponse {
    enum RequestStatus {
        UNKNOWN = 0;
        ACCEPTED = 1;
        NOT_ACCEPTED = 2;
    }
    RequestStatus status = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

message GetCertificateRequest {
    string uuid = 1;
}

message GetCertificateResponse {
    string certificate = 1;
}